--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>مطعمي — الصفحة الرئيسية</title>
+<title>أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم | طلب الطعام أونلاين في مكة</title>
 
   <!-- Google Font Tajawal -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap" rel="stylesheet">
@@ -14,6 +14,68 @@
 
 <!-- Animate.css CDN لإضافة حركة للنصوص -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+<meta name="keywords" content="مطعم مكة, أكلات شعبية يمنية, الطعام اليمني, أكلات يمنية تقليدية, مطعم الزمن القديم, طلب الطعام أونلاين مكة, المندي اليمني, السلتة اليمنية, الكبسة اليمنية, الشوا التلي اليمني, مطاعم مكة المكرمة">
+<meta name="author" content="مطعم الزمن القديم">
+<meta name="description" content="استمتع بأشهى الأكلات الشعبية اليمنية في مطعم الزمن القديم بمكة المكرمة. يقدم لك أطعمة تقليدية يمنية فريدة من نوعها، مثل المندي، السلتة، والكبسة، ويمكنك الآن طلب الطعام أونلاين وتوصيله إلى باب منزلك.">
+
+<!-- Directives for Googlebot and other bots -->
+<meta name="googlebot" content="index, follow">
+<meta name="robots" content="index, follow">
+
+<!-- Canonical Link -->
+<link rel="canonical" href="https://alzamanrestaurant.com.sa/">
+
+<!-- Open Graph Meta Tags -->
+<meta property="og:locale" content="ar_AR">
+<meta property="og:type" content="website">
+<meta property="og:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
+<meta property="og:description" content="مطعم الزمن القديم يقدم لك أفضل الأكلات الشعبية اليمنية في مكة المكرمة. اطلب الطعام الآن عبر موقعنا واستمتع بتجربة لا تُنسى من المندي، السلتة، والكبسة اليمنية.">
+<meta property="og:url" content="https://alzamanrestaurant.com.sa/">
+<meta property="og:site_name" content="مطعم الزمن القديم">
+<meta property="og:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:description" content="مطعم الزمن القديم في مكة يقدم ألذ الأكلات الشعبية اليمنية. اطلب طعامك الآن أونلاين واستمتع بخدمة توصيل سريعة ومريحة إلى منزلك.">
+<meta name="twitter:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
+<meta name="twitter:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
+<meta name="twitter:url" content="https://alzamanrestaurant.com.sa/">
+
+<!-- Structured Data for Contact Information (Schema Markup) -->
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Organization",
+  "name": "مطعم الزمن القديم",
+  "url": "https://alzamanrestaurant.com.sa/",
+  "logo": "https://i.postimg.cc/d0Yq5yKL/image.png",
+  "contactPoint": [{
+    "@type": "ContactPoint",
+    "telephone": "966550852093",
+    "contactType": "customer service",
+    "areaServed": "SA",
+    "availableLanguage": "Arabic"
+  }],
+  "sameAs": [
+    "https://www.facebook.com/alzamanrestaurant",
+    "https://twitter.com/alzamanrestaurant",
+    "https://www.instagram.com/alzamanrestaurant"
+  ]
+}
+</script>
+
+<!-- Sitemap Link (helps search engines discover the sitemap) -->
+<link rel="sitemap" type="application/xml" href="https://alzamanrestaurant.com.sa/sitemap.xml">
+
+<!-- Hreflang for multilingual support -->
+<link rel="alternate" href="https://alzamanrestaurant.com.sa/" hreflang="ar-sa">
+
+<!-- Favicon -->
+<link rel="icon" href="https://i.postimg.cc/d0Yq5yKL/image.png" type="image/png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://i.postimg.cc/d0Yq5yKL/image.png">
+
+<meta name="rating" content="General">
+<meta name="copyright" content="جميع الحقوق محفوظة لموقع مطعم الزمن القديم | © 2025">
 
   <style>
     :root{
