--- a/index.html
+++ b/index.html
@@ -66,6 +66,29 @@
   height: 60px;
   animation: spin 1.5s linear infinite;
 }
+
+/* Toast Notification */
+.toast-home {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  background-color: #198754; /* أخضر Bootstrap */
+  color: #fff;
+  padding: 12px 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.4s ease;
+  z-index: 9999;
+  font-family: 'Tajawal', sans-serif;
+}
+
+.toast-home.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 /* حركة الـ Loader */
 @keyframes spin {
   0% {
@@ -200,6 +223,7 @@
 </body>
 
 </html>
+
 
 
 
